--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.10",
     "astro": "^5.9.3",
     "astro-icon": "^1.1.5",
+    "firebase": "^11.9.1",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
