--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@iconify-json/material-symbols": "^1.2.27",
@@ -20,6 +21,10 @@
     "typescript": "^5.8.3"
   },
   "devDependencies": {
-    "@iconify-json/octicon": "^1.2.6"
+    "@eslint/js": "^9.29.0",
+    "@iconify-json/octicon": "^1.2.6",
+    "eslint": "^9.29.0",
+    "globals": "^16.2.0",
+    "typescript-eslint": "^8.35.0"
   }
 }
