--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "cy:coverage": "cypress run"
   },
   "dependencies": {
     "@iconify-json/material-symbols": "^1.2.27",
