--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.1.10",
     "astro": "^5.9.3",
     "astro-icon": "^1.1.5",
+    "cypress": "^14.5.0",
     "firebase": "^11.9.1",
     "tailwindcss": "^4.1.10",
     "typescript": "^5.8.3"
