--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "astro preview",
     "astro": "astro",
     "lint": "eslint .",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
     "cy:coverage": "cypress run"
   },
   "dependencies": {
@@ -17,7 +19,6 @@
     "@tailwindcss/vite": "^4.1.10",
     "astro": "^5.9.3",
     "astro-icon": "^1.1.5",
-    "cypress": "^14.5.0",
     "firebase": "^11.9.1",
     "tailwindcss": "^4.1.10",
     "typescript": "^5.8.3"
@@ -25,8 +26,11 @@
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "@iconify-json/octicon": "^1.2.6",
+    "@vitest/coverage-v8": "^3.2.4",
+    "cypress": "^14.5.0",
     "eslint": "^9.29.0",
     "globals": "^16.2.0",
-    "typescript-eslint": "^8.35.0"
+    "typescript-eslint": "^8.35.0",
+    "vitest": "^3.2.4"
   }
 }
